first take at the C# version of the array_reconstructor code plus tests

--- a/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
+++ b/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
@@ -98,6 +98,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pickle\ArrayConstructorTests.cs" />
     <Compile Include="Pickle\AssertUtils.cs" />
     <Compile Include="Pickle\PicklerTests.cs" />
     <Compile Include="Pickle\PickleUtilsTests.cs" />
