--- a/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
+++ b/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Pickle\UnpicklerTests.cs" />
     <Compile Include="Pickle\UnpickleStackTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Pyro\MessageTests.cs" />
     <Compile Include="Testrunner.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +140,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pyro" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
 </Project>
