--- a/dotnet/Pyrolite/Pyrolite.csproj
+++ b/dotnet/Pyrolite/Pyrolite.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Pickle\Objects\ComplexNumber.cs" />
     <Compile Include="Pickle\Objects\DateTimeConstructor.cs" />
     <Compile Include="Pickle\Objects\DecimalConstructor.cs" />
+    <Compile Include="Pickle\Objects\ClassDictConstructor.cs" />
     <Compile Include="Pickle\Objects\SetConstructor.cs" />
     <Compile Include="Pickle\Objects\StringConstructor.cs" />
     <Compile Include="Pickle\Opcodes.cs" />
