--- a/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
+++ b/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
     <ProjectGuid>{13104365-F133-41BD-AA6B-FF66501D6510}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -7,7 +7,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Pyrolite.Tests</RootNamespace>
     <AssemblyName>Pyrolite.Tests</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
@@ -95,6 +95,7 @@
     <Compile Include="Pickle\UnpickleStackTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pyro\MessageTests.cs" />
+    <Compile Include="Pyro\SerpentSerializerTests.cs" />
     <Compile Include="Testrunner.cs" />
   </ItemGroup>
   <ItemGroup>
