--- a/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
+++ b/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
@@ -71,6 +71,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Razorvine.Serpent">
+      <HintPath>lib\Razorvine.Serpent.dll</HintPath>
+    </Reference>
     <Reference Include="System">
     </Reference>
     <Reference Include="System.Core" />
