--- a/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
+++ b/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Pickle\UnpickleStackTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pyro\MessageTests.cs" />
+    <Compile Include="Pyro\SerializePyroTests.cs" />
     <Compile Include="Pyro\SerpentSerializerTests.cs" />
     <Compile Include="Testrunner.cs" />
   </ItemGroup>
