--- a/dotnet/Pyrolite/Pyrolite.csproj
+++ b/dotnet/Pyrolite/Pyrolite.csproj
@@ -122,7 +122,9 @@
     <Compile Include="Pyro\NameServerProxy.cs" />
     <Compile Include="Pyro\ProxyClassConstructor.cs" />
     <Compile Include="Pyro\PyroException.cs" />
+    <Compile Include="Pyro\PyroExceptionPickler.cs" />
     <Compile Include="Pyro\PyroProxy.cs" />
+    <Compile Include="Pyro\PyroProxyPickler.cs" />
     <Compile Include="Pyro\PyroURI.cs" />
     <Compile Include="Pyro\PyroUriPickler.cs" />
     <Compile Include="Pyro\Serializers.cs" />
