added metadata. made proxy dynamic.

--- a/dotnet/Pyrolite.TestFlame/Pyrolite.TestFlame.csproj
+++ b/dotnet/Pyrolite.TestFlame/Pyrolite.TestFlame.csproj
@@ -71,6 +71,7 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
