dotnet fixes for per-proxy hmac in examples

--- a/dotnet/Pyrolite.PickleExample/Pyrolite.PickleExample.csproj
+++ b/dotnet/Pyrolite.PickleExample/Pyrolite.PickleExample.csproj
@@ -29,6 +29,9 @@
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core">
