added missing package to javadocs. modify timezone example.

--- a/build.xml
+++ b/build.xml
@@ -74,6 +74,7 @@
       <package name="net.razorvine.pickle" />
       <package name="net.razorvine.pickle.objects" />
       <package name="net.razorvine.pyro" />
+      <package name="net.razorvine.pyro.serializer" />
     </javadoc>
   </target>
 </project>
