--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="java/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="java/lib/serpent.jar"/>
+	<classpathentry kind="lib" path="java/lib/serpent-1.10.jar"/>
 	<classpathentry kind="output" path="java/bin"/>
 </classpath>
