--- a/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
+++ b/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
@@ -72,7 +72,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Razorvine.Serpent">
-      <HintPath>lib\Razorvine.Serpent.dll</HintPath>
+      <HintPath>..\lib\Razorvine.Serpent.dll</HintPath>
     </Reference>
     <Reference Include="System">
     </Reference>
