junit fork setting needed for ant 1.9

--- a/build.xml
+++ b/build.xml
@@ -56,7 +56,7 @@
   </target>
   
   <target name="test" depends="build-test">
-    <junit failureproperty="junit.failure">
+    <junit failureproperty="junit.failure" fork="true">
       <classpath refid="classpath.test" />
       <batchtest>
         <fileset dir="${testsrc}">
