Fixed serialization of PyroProxy. Wire protocol upgraded to 48. Added handshaking.

--- a/dotnet/Pyrolite.TestPyroEcho/Pyrolite.TestPyroEcho.csproj
+++ b/dotnet/Pyrolite.TestPyroEcho/Pyrolite.TestPyroEcho.csproj
@@ -48,6 +48,7 @@
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
+    <StartAction>Project</StartAction>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <OutputPath>bin\Release\</OutputPath>
