--- a/dotnet/Pyrolite.TestPyroEcho/Pyrolite.TestPyroEcho.csproj
+++ b/dotnet/Pyrolite.TestPyroEcho/Pyrolite.TestPyroEcho.csproj
@@ -96,8 +96,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEcho.cs" />
+    <Compile Include="TestHandshake.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
