--- a/java/pom.xml
+++ b/java/pom.xml
@@ -28,6 +28,7 @@
 					<configuration>
 						<source>1.6</source>
 						<target>1.6</target>
+						<compilerArgument>-Xlint:unchecked</compilerArgument>
 					</configuration>
 				</plugin>
 				<plugin>
