--- a/dotnet/Pyrolite/Pyrolite.nuspec
+++ b/dotnet/Pyrolite/Pyrolite.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Razorvine.Pyrolite</id>
-    <version>4.10.0.0</version>
+    <version>4.11.0.0</version>
     <title>Razorvine.Pyrolite</title>
     <authors>Irmen de Jong</authors>
     <owners>Irmen de Jong</owners>
@@ -13,8 +13,8 @@
 Also includes Pickle/Unpickle.
 More info about Pyro: http://pythonhosted.org/Pyro4/</description>
   	<summary>Pyro (Python Remote Objects) client library</summary>
-    <releaseNotes>@todo</releaseNotes>
-    <copyright>Copyright 2015</copyright>
+    <releaseNotes>added compatibility with Pyro 4.44+ metadata datatype change (set to list)</releaseNotes>
+    <copyright>Copyright 2015, 2016</copyright>
     <tags>pyro python rpc remote-objects</tags>
 	  <dependencies>
 	  	<dependency id="Razorvine.Serpent" version="1.12" />
