--- a/dotnet/Pyrolite.TestPyroNaming/Pyrolite.TestPyroNaming.csproj
+++ b/dotnet/Pyrolite.TestPyroNaming/Pyrolite.TestPyroNaming.csproj
@@ -66,6 +66,7 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -74,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestNaming.cs" />
+    <Compile Include="TestStreaming.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
