--- a/dotnet/Pyrolite.TestPyroEcho/Pyrolite.TestPyroEcho.csproj
+++ b/dotnet/Pyrolite.TestPyroEcho/Pyrolite.TestPyroEcho.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEcho.cs" />
     <Compile Include="TestHandshake.cs" />
+    <Compile Include="TestStreaming.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
