--- a/java/pom.xml
+++ b/java/pom.xml
@@ -97,5 +97,7 @@ Pyrolite only implements part of the client side Pyro library, hence its name 'l
 Version 4.14 changes:
 Java 7 or newer is now required to build (jdk 1.7+).
 Support for protocol changes introduced in Pyro 4.48.
+Support for iterator result item streaming added (introduced in Pyro 4.49).
+Shows python exception type better in .net exception messages.
 </description>
 </project>
