--- a/dotnet/Pyrolite/Pyrolite.nuspec
+++ b/dotnet/Pyrolite/Pyrolite.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Razorvine.Pyrolite</id>
-    <version>4.14.0.0</version>
+    <version>4.15.0.0</version>
     <title>Razorvine.Pyrolite</title>
     <authors>Irmen de Jong</authors>
     <owners>Irmen de Jong</owners>
@@ -14,15 +14,13 @@ Also includes Pickle/Unpickle.
 More info about Pyro: http://pythonhosted.org/Pyro4/</description>
   	<summary>Pyro (Python Remote Objects) client library</summary>
     <releaseNotes>
-Support for protocol changes introduced in Pyro 4.48.
-Support for iterator result item streaming added (introduced in Pyro 4.49).
-Fixed type casting crash in proxy metadata retrieval.
-Shows python exception type better in .net exception messages.
+Serpent serialization fixes. 
+Requires Razorvine.Serpent library version 1.16 or newer.
 </releaseNotes>
     <copyright>Copyright 2015, 2016</copyright>
     <tags>pyro python rpc remote-objects</tags>
 	  <dependencies>
-	  	<dependency id="Razorvine.Serpent" version="1.15.1" />
+	  	<dependency id="Razorvine.Serpent" version="1.16" />
   	</dependencies>
   </metadata>
   <files>
