dotnet: fix decode_escaped of \'

--- a/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
+++ b/dotnet/Pyrolite.Tests/Pyrolite.Tests.csproj
@@ -103,6 +103,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="pickled_bytes_level0.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="pickled_nameserver_proxy_p2.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
