--- a/dotnet/Pyrolite/Pyrolite.nuspec
+++ b/dotnet/Pyrolite/Pyrolite.nuspec
@@ -14,7 +14,7 @@ Also includes Pickle/Unpickle.
 More info about Pyro: http://pythonhosted.org/Pyro4/</description>
   	<summary>Pyro (Python Remote Objects) client library</summary>
     <releaseNotes>
-Fixed handshake type cast error that prevented the library from working at all (was caused by modified serpent deserializer protocol in new serpent library)
+fixed decode crash of escaped single quote (\') that sometimes occurs in protocol level 0 pickled strings
 </releaseNotes>
     <copyright>Copyright 2015, 2016</copyright>
     <tags>pyro python rpc remote-objects</tags>
