--- a/dotnet/Pyrolite/Pyrolite.nuspec
+++ b/dotnet/Pyrolite/Pyrolite.nuspec
@@ -14,7 +14,8 @@ Also includes Pickle/Unpickle.
 More info about Pyro: http://pythonhosted.org/Pyro4/</description>
   	<summary>Pyro (Python Remote Objects) client library</summary>
     <releaseNotes>
-fixed decode crash of escaped single quote (\') that sometimes occurs in protocol level 0 pickled strings
+Fixed decode crash of escaped single quote (\') that sometimes occurs in protocol level 0 pickled strings.
+Made even more fields of the Unpickler class protected so they can be accessed in a subclass.
 </releaseNotes>
     <copyright>Copyright 2015, 2016</copyright>
     <tags>pyro python rpc remote-objects</tags>
