--- a/java/pom.xml
+++ b/java/pom.xml
@@ -94,6 +94,8 @@
 
 Pyrolite only implements part of the client side Pyro library, hence its name 'lite'...  But because Pyrolite has no dependencies, it is a much lighter way to use Pyro from Java/.NET than a solution with jython+pyro or IronPython+Pyro would provide. So if you don't need Pyro's full feature set, and don't require your Java/.NET code to host Pyro objects itself, Pyrolite may be a good choice to connect java or .NET and python.
 
-Version 4.17 changes: fixed decode crash of escaped single quote (\') that sometimes occurs in protocol level 0 pickled strings
+Version 4.17 changes:
+Fixed decode crash of escaped single quote (\') that sometimes occurs in protocol level 0 pickled strings.
+Made even more fields of the Unpickler class protected so they can be accessed in a subclass.
 </description>
 </project>
