--- a/java/pom.xml
+++ b/java/pom.xml
@@ -97,5 +97,6 @@ Pyrolite only implements part of the client side Pyro library, hence its name 'l
 Version 4.17 changes:
 Fixed decode crash of escaped single quote (\') that sometimes occurs in protocol level 0 pickled strings.
 Made even more fields of the Unpickler class protected so they can be accessed in a subclass.
+Implemented pickle's persistent ID functionality via the new persistentLoad method on the Unpickler, and the PERSID/BINPERSID opcodes.
 </description>
 </project>
