--- a/dotnet/Pyrolite/Pyrolite.nuspec
+++ b/dotnet/Pyrolite/Pyrolite.nuspec
@@ -14,12 +14,13 @@ Also includes Pickle/Unpickle.
 More info about Pyro: http://pythonhosted.org/Pyro4/</description>
   	<summary>Pyro (Python Remote Objects) client library</summary>
     <releaseNotes>
+PICKLE FIXES:
 Fixed decode crash of escaped single quote (\') that sometimes occurs in protocol level 0 pickled strings.
 Made even more fields of the Unpickler class protected so they can be accessed in a subclass.
 Implemented pickle's persistent ID functionality via the new persistentLoad method on the Unpickler, and the PERSID/BINPERSID opcodes.
 Implemented pickle opcodes OBJ and INST (rarely encountered, but still).
 </releaseNotes>
-    <copyright>Copyright 2015, 2016</copyright>
+    <copyright>Copyright 2015, 2016, 2017</copyright>
     <tags>pyro python rpc remote-objects</tags>
 	  <dependencies>
 	  	<dependency id="Razorvine.Serpent" version="1.16" />
